[package]
name = "rdbrowser"
version = "0.1.0"
authors = ["Dmitry Danilov <dmitry.b.danilov@gmail.com>"]
repository = "https://github.com/f-squirrel/rdbrowser"
homepage = "https://github.com/f-squirrel/rdbrowser"
description = "CLI Browser for RocksDB"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
rocksdb = "0.15.0"
hex = "0.4.2"
simple-error = "0.2"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1"
tempfile = "3.2.0"
